--- a/src/main/resources/fxml/user/userHome.fxml
+++ b/src/main/resources/fxml/user/userHome.fxml
@@ -8,25 +8,30 @@
 
 <VBox prefHeight="165.0" prefWidth="331.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.crowvalley.tawelib.controller.user.UserHomeController">
-   <AnchorPane prefHeight="169.0" prefWidth="331.0">
-      <Label fx:id="lblWelcome" alignment="CENTER" layoutY="26.0" prefHeight="26.0" prefWidth="331.0" textAlignment="CENTER" textFill="#4400ff">
-         <font>
-            <Font name="Modern No. 20" size="24.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblLogOut" layoutX="286.0" layoutY="5.0" text="Log Out" underline="true">
-         <font>
-            <Font name="System Italic" size="11.0" />
-         </font>
-      </Label>
-      <Label fx:id="lblBalance" alignment="CENTER_RIGHT" layoutX="172.0" layoutY="139.0" prefHeight="16.0" prefWidth="150.0">
-         <font>
-            <Font name="System Italic" size="11.0" />
-         </font>
-      </Label>
-      <Button fx:id="btnResources" layoutX="49.0" layoutY="66.0" text="Browse Resources" />
-      <Button fx:id="btnLoans" layoutX="49.0" layoutY="101.0" prefHeight="25.0" prefWidth="111.0" text="My Loans" />
-      <Button fx:id="btnProfile" layoutX="171.0" layoutY="66.0" prefHeight="25.0" prefWidth="111.0" text="My Profile" />
-      <Button fx:id="btnFinesAndPayments" layoutX="171.0" layoutY="101.0" prefHeight="25.0" prefWidth="111.0" text="Fines &amp; Payments" />
-   </AnchorPane>
+    <AnchorPane prefHeight="169.0" prefWidth="331.0">
+        <Label fx:id="lblWelcome" alignment="CENTER" layoutY="26.0" prefHeight="26.0" prefWidth="331.0"
+               textAlignment="CENTER" textFill="#4400ff">
+            <font>
+                <Font name="Modern No. 20" size="24.0"/>
+            </font>
+        </Label>
+        <Label layoutX="286.0" layoutY="5.0" text="Log Out" underline="true" onMouseClicked="#logOut">
+            <font>
+                <Font name="System Italic" size="11.0"/>
+            </font>
+        </Label>
+        <Label fx:id="lblBalance" alignment="CENTER_RIGHT" layoutX="172.0" layoutY="139.0" prefHeight="16.0"
+               prefWidth="150.0">
+            <font>
+                <Font name="System Italic" size="11.0"/>
+            </font>
+        </Label>
+        <Button layoutX="49.0" layoutY="66.0" text="Browse Resources" onAction="#openResourcesPage"/>
+        <Button layoutX="49.0" layoutY="101.0" prefHeight="25.0" prefWidth="111.0" text="My Loans"
+                onAction="#openLoansPage"/>
+        <Button layoutX="171.0" layoutY="66.0" prefHeight="25.0" prefWidth="111.0" text="My Profile"
+                onAction="#openUserProfilePage"/>
+        <Button layoutX="171.0" layoutY="101.0" prefHeight="25.0" prefWidth="111.0" text="Fines &amp; Payments"
+                onAction="#openFinesAndPaymentsPage"/>
+    </AnchorPane>
 </VBox>
