--- a/src/main/resources/fxml/user/userLoans.fxml
+++ b/src/main/resources/fxml/user/userLoans.fxml
@@ -10,29 +10,32 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="353.0" prefWidth="540.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.user.UserLoansController">
+<VBox prefHeight="353.0" prefWidth="540.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.user.UserLoansController">
     <BorderPane prefWidth="540.0">
         <center>
             <TableView fx:id="tblLoans" prefHeight="298.0" prefWidth="520.0" BorderPane.alignment="CENTER">
                 <columns>
-                    <TableColumn fx:id="colCopy" prefWidth="272.0" text="Copy" />
-                    <TableColumn fx:id="colStartDate" prefWidth="82.0" text="Start Date" />
-                    <TableColumn fx:id="colEndDate" prefWidth="82.0" text="End Date" />
-                    <TableColumn fx:id="colReturnDate" prefWidth="82.0" text="Return Date" />
+                    <TableColumn fx:id="colCopy" prefWidth="272.0" text="Copy"/>
+                    <TableColumn fx:id="colStartDate" prefWidth="82.0" text="Start Date"/>
+                    <TableColumn fx:id="colEndDate" prefWidth="82.0" text="End Date"/>
+                    <TableColumn fx:id="colReturnDate" prefWidth="82.0" text="Return Date"/>
                 </columns>
                 <BorderPane.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </BorderPane.margin>
             </TableView>
         </center>
         <top>
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
-                <Button fx:id="btnBack" layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back"/>
+                <Button layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back" onAction="#loadUserHome"/>
                 <Label layoutX="157.0" layoutY="15.0" text="Between:"/>
-                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"/>
+                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
                 <Label layoutX="335.0" layoutY="15.0" text="and"/>
-                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"/>
-                <Button fx:id="btnClearDate" layoutX="485.0" layoutY="11.0" text="Clear"/>
+                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0"
+                            onAction="#search"/>
+                <Button layoutX="485.0" layoutY="11.0" text="Clear" onAction="#clearDate"/>
             </AnchorPane>
         </top>
     </BorderPane>
