--- a/src/main/resources/fxml/user/userProfile.fxml
+++ b/src/main/resources/fxml/user/userProfile.fxml
@@ -8,38 +8,43 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.crowvalley.tawelib.controller.user.UserProfileController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.crowvalley.tawelib.controller.user.UserProfileController">
     <BorderPane prefHeight="413.0" prefWidth="640.0">
         <center>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <Label layoutX="97.0" layoutY="45.0" text="Username:" />
-                <Label layoutX="93.0" layoutY="76.0" text="First Name:" />
-                <Label layoutX="103.0" layoutY="107.0" text="Surname:" />
-                <Label layoutX="69.0" layoutY="138.0" text="Phone Number:" />
-                <Label layoutX="50.0" layoutY="169.0" text="House Num/Name:" />
-                <Label layoutX="118.0" layoutY="200.0" text="Street:" />
-                <Label layoutX="120.0" layoutY="231.0" text="Town:" />
-                <Label layoutX="111.0" layoutY="262.0" text="County:" />
-                <Label layoutX="100.0" layoutY="293.0" text="Postcode:" />
+                <Label layoutX="97.0" layoutY="45.0" text="Username:"/>
+                <Label layoutX="93.0" layoutY="76.0" text="First Name:"/>
+                <Label layoutX="103.0" layoutY="107.0" text="Surname:"/>
+                <Label layoutX="69.0" layoutY="138.0" text="Phone Number:"/>
+                <Label layoutX="50.0" layoutY="169.0" text="House Num/Name:"/>
+                <Label layoutX="118.0" layoutY="200.0" text="Street:"/>
+                <Label layoutX="120.0" layoutY="231.0" text="Town:"/>
+                <Label layoutX="111.0" layoutY="262.0" text="County:"/>
+                <Label layoutX="100.0" layoutY="293.0" text="Postcode:"/>
 
-                <TextField fx:id="txtUsername" layoutX="161.0" layoutY="41.0" />
-                <TextField fx:id="txtFirstName" layoutX="161.0" layoutY="72.0" />
-                <TextField fx:id="txtSurname" layoutX="161.0" layoutY="103.0" />
-                <TextField fx:id="txtPhoneNum" layoutX="161.0" layoutY="134.0" />
-                <TextField fx:id="txtHouseNum" layoutX="161.0" layoutY="165.0" />
-                <TextField fx:id="txtStreet" layoutX="161.0" layoutY="196.0" />
-                <TextField fx:id="txtTown" layoutX="161.0" layoutY="227.0" />
-                <TextField fx:id="txtCounty" layoutX="161.0" layoutY="258.0" />
-                <TextField fx:id="txtPostcode" layoutX="161.0" layoutY="289.0" />
+                <TextField fx:id="txtUsername" layoutX="161.0" layoutY="41.0"/>
+                <TextField fx:id="txtFirstName" layoutX="161.0" layoutY="72.0"/>
+                <TextField fx:id="txtSurname" layoutX="161.0" layoutY="103.0"/>
+                <TextField fx:id="txtPhoneNum" layoutX="161.0" layoutY="134.0"/>
+                <TextField fx:id="txtHouseNum" layoutX="161.0" layoutY="165.0"/>
+                <TextField fx:id="txtStreet" layoutX="161.0" layoutY="196.0"/>
+                <TextField fx:id="txtTown" layoutX="161.0" layoutY="227.0"/>
+                <TextField fx:id="txtCounty" layoutX="161.0" layoutY="258.0"/>
+                <TextField fx:id="txtPostcode" layoutX="161.0" layoutY="289.0"/>
 
-                <Button fx:id="btnSaveOrUpdate" layoutX="133.0" layoutY="334.0" prefHeight="25.0" prefWidth="120.0" text="Update Profile" />
+                <Button fx:id="btnSaveOrUpdate" layoutX="133.0" layoutY="334.0" prefHeight="25.0" prefWidth="120.0"
+                        text="Update Profile" onAction="#saveOrUpdateProfile"/>
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutX="14.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" />
-                <Button fx:id="btnChangePic" layoutX="62.0" layoutY="334.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture" />
-                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
+                <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutX="14.0" layoutY="64.0"
+                           pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0"
+                           AnchorPane.rightAnchor="14.0"/>
+                <Button layoutX="62.0" layoutY="334.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture"
+                        onAction="#chooseImage"/>
+                <Button layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#loadUserHome"/>
             </AnchorPane>
         </left>
     </BorderPane>
