--- a/src/main/resources/fxml/user/userViewResource.fxml
+++ b/src/main/resources/fxml/user/userViewResource.fxml
@@ -15,37 +15,40 @@
     <BorderPane prefHeight="200.0" prefWidth="200.0">
         <center>
             <AnchorPane prefHeight="389.0" prefWidth="309.0" BorderPane.alignment="CENTER">
-                <Label layoutX="102.0" layoutY="181.0" text="Title:" />
-                <Label layoutX="102.0" layoutY="212.0" text="Year:" />
-                <Label fx:id="lblOptional1" layoutX="88.0" layoutY="243.0" visible="false" />
-                <Label fx:id="lblOptional2" layoutX="76.0" layoutY="274.0" visible="false" />
-                <Label fx:id="lblOptional3" layoutX="93.0" layoutY="305.0" visible="false" />
-                <Label fx:id="lblOptional4" layoutX="99.0" layoutY="336.0" visible="false" />
-                <Label fx:id="lblOptional5" layoutX="28.0" layoutY="367.0" visible="false" />
+                <Label layoutX="102.0" layoutY="181.0" text="Title:"/>
+                <Label layoutX="102.0" layoutY="212.0" text="Year:"/>
+                <Label fx:id="lblOptional1" layoutX="88.0" layoutY="243.0" visible="false"/>
+                <Label fx:id="lblOptional2" layoutX="76.0" layoutY="274.0" visible="false"/>
+                <Label fx:id="lblOptional3" layoutX="93.0" layoutY="305.0" visible="false"/>
+                <Label fx:id="lblOptional4" layoutX="99.0" layoutY="336.0" visible="false"/>
+                <Label fx:id="lblOptional5" layoutX="28.0" layoutY="367.0" visible="false"/>
 
-                <TextField fx:id="txtTitle" disable="true" layoutX="136.0" layoutY="177.0" />
-                <TextField fx:id="txtYear" disable="true" layoutX="136.0" layoutY="208.0" />
-                <TextField fx:id="txtOptional1" disable="true" layoutX="136.0" layoutY="239.0" visible="false" />
-                <TextField fx:id="txtOptional2" disable="true" layoutX="136.0" layoutY="270.0" visible="false" />
-                <TextField fx:id="txtOptional3" disable="true" layoutX="136.0" layoutY="301.0" visible="false" />
-                <TextField fx:id="txtOptional4" disable="true" layoutX="136.0" layoutY="332.0" visible="false" />
-                <TextField fx:id="txtOptional5" disable="true" layoutX="136.0" layoutY="363.0" visible="false" />
+                <TextField fx:id="txtTitle" disable="true" layoutX="136.0" layoutY="177.0"/>
+                <TextField fx:id="txtYear" disable="true" layoutX="136.0" layoutY="208.0"/>
+                <TextField fx:id="txtOptional1" disable="true" layoutX="136.0" layoutY="239.0" visible="false"/>
+                <TextField fx:id="txtOptional2" disable="true" layoutX="136.0" layoutY="270.0" visible="false"/>
+                <TextField fx:id="txtOptional3" disable="true" layoutX="136.0" layoutY="301.0" visible="false"/>
+                <TextField fx:id="txtOptional4" disable="true" layoutX="136.0" layoutY="332.0" visible="false"/>
+                <TextField fx:id="txtOptional5" disable="true" layoutX="136.0" layoutY="363.0" visible="false"/>
 
-                <ImageView fx:id="imgResourcePic" fitHeight="155.0" fitWidth="149.0" layoutX="113.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="113.0" />
+                <ImageView fx:id="imgResourcePic" fitHeight="155.0" fitWidth="149.0" layoutX="113.0" layoutY="7.0"
+                           pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="113.0"/>
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="389.0" prefWidth="314.0" BorderPane.alignment="CENTER">
-                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
-                <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="354.0">
+                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#goBack"/>
+                <TableView fx:id="tblCopies" layoutX="14.0" layoutY="54.0" prefHeight="300.0" prefWidth="354.0"
+                           onMouseClicked="#enableButtonsIfResourceSelected">
                     <columns>
-                        <TableColumn fx:id="colLoanDuration" prefWidth="85.0" text="Loan Duration" />
-                        <TableColumn fx:id="colLocation" prefWidth="77.0" text="Location" />
-                        <TableColumn fx:id="colNumOfRequests" prefWidth="69.0" text="# Requests" />
-                        <TableColumn fx:id="colInfo" prefWidth="120.0" text="Additional Info" />
+                        <TableColumn fx:id="colLoanDuration" prefWidth="85.0" text="Loan Duration"/>
+                        <TableColumn fx:id="colLocation" prefWidth="77.0" text="Location"/>
+                        <TableColumn fx:id="colNumOfRequests" prefWidth="69.0" text="# Requests"/>
+                        <TableColumn fx:id="colInfo" prefWidth="120.0" text="Additional Info"/>
                     </columns>
                 </TableView>
-                <Button fx:id="btnMakeRequest" disable="true" layoutX="145.0" layoutY="362.0" text="Make Request" />
+                <Button fx:id="btnMakeRequest" disable="true" layoutX="145.0" layoutY="362.0" text="Make Request"
+                        onAction="#makeRequest"/>
             </AnchorPane>
         </left>
     </BorderPane>
