--- a/src/main/resources/fxml/user/userFinesAndPayments.fxml
+++ b/src/main/resources/fxml/user/userFinesAndPayments.fxml
@@ -29,9 +29,9 @@
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
                 <Button layoutX="11.0" layoutY="11.0" text="&lt;&lt; Back" onAction="#loadUserHome"/>
                 <Label layoutX="157.0" layoutY="15.0" text="Between:"/>
-                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#searchInternal"/>
+                <DatePicker fx:id="dateStart" layoutX="210.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
                 <Label layoutX="335.0" layoutY="15.0" text="and"/>
-                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#searchInternal"/>
+                <DatePicker fx:id="dateEnd" layoutX="360.0" layoutY="11.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
                 <Button layoutX="485.0" layoutY="11.0" text="Clear" onAction="#clearDate"/>
             </AnchorPane>
         </top>
