Make Librarian Profile controller more DRY, and set onActions in FXML

--- a/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianFinesAndPaymentsTab.fxml
@@ -11,7 +11,7 @@
         <top>
             <AnchorPane prefHeight="0.0" prefWidth="540.0" BorderPane.alignment="CENTER">
                 <Label layoutX="11.0" layoutY="14.0" text="User:"/>
-                <TextField fx:id="txtSearch" layoutX="43.0" layoutY="10.0" />
+                <TextField fx:id="txtSearch" layoutX="43.0" layoutY="10.0" onKeyPressed="#searchIfEnterPressed"/>
                 <Button layoutX="187.0" layoutY="10.0" text="Search" onAction="#search"/>
                 <Label layoutX="257.0" layoutY="14.0" text="Between:"/>
                 <DatePicker fx:id="dateStart" layoutX="310.0" layoutY="10.0" prefHeight="25.0" prefWidth="120.0" onAction="#search"/>
