--- a/src/main/resources/fxml/librarian/librarianProfileTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianProfileTab.fxml
@@ -31,13 +31,13 @@
                 <TextField fx:id="txtPostcode" layoutX="161.0" layoutY="262.0" />
                 <TextField fx:id="txtEmploymentDate" layoutX="161.0" layoutY="294.0" disable="true" />
 
-                <Button fx:id="btnSaveOrUpdate" layoutX="175.0" layoutY="331.0" prefHeight="25.0" prefWidth="120.0" text="Update Profile" />
+                <Button fx:id="btnSaveOrUpdate" layoutX="175.0" layoutY="331.0" prefHeight="25.0" prefWidth="120.0" text="Update Profile" onAction="#saveOrUpdateProfile"/>
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutX="14.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" />
-                <Button fx:id="btnChangePic" layoutX="62.0" layoutY="318.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture" />
+                <Button fx:id="btnChangePic" layoutX="62.0" layoutY="318.0" prefHeight="25.0" prefWidth="143.0" text="Change Profile Picture" onAction="#chooseImage"/>
             </AnchorPane>
         </left>
     </BorderPane>
