--- a/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
+++ b/src/main/resources/fxml/librarian/librarianResourcesTab.fxml
@@ -13,7 +13,7 @@
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <buttons>
                     <Button fx:id="btnNewResource" minWidth="0.0" prefHeight="25.0" prefWidth="143.0" text="Create New Resource" />
-                    <Button fx:id="btnViewResource" disable="true" text="View Resource/Copies" />
+                    <Button fx:id="btnViewResource" disable="true" text="View Resource/Copies" onAction="#openViewResourcePage" />
                     <Button fx:id="btnEditResource" disable="true" text="Edit Resource" />
                     <Button fx:id="btnDeleteResource" disable="true" text="Delete Resource" />
                 </buttons>
@@ -23,7 +23,7 @@
             </ButtonBar>
         </bottom>
         <center>
-            <TableView fx:id="tblResources" prefHeight="281.0" prefWidth="416.0" BorderPane.alignment="CENTER">
+            <TableView fx:id="tblResources" prefHeight="281.0" prefWidth="416.0" BorderPane.alignment="CENTER" onMouseClicked="#enableButtonsIfResourceSelected">
                 <columns>
                     <TableColumn fx:id="colType" prefWidth="70.0" text="Type" />
                     <TableColumn fx:id="colTitle" prefWidth="478.0" text="Title" />
@@ -37,7 +37,10 @@
         <top>
             <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
                 <Label layoutX="227.0" layoutY="14.0" text="Resource Type:"/>
-                <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0">
+                <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0" onAction="#executeTypeChange">
+                    <value>
+                        <ResourceType fx:value="ALL" />
+                    </value>
                     <items>
                         <FXCollections fx:factory="observableArrayList">
                             <ResourceType fx:value="ALL"/>
@@ -47,8 +50,8 @@
                         </FXCollections>
                     </items>
                 </ChoiceBox>
-                <TextField fx:id="txtSearch" layoutX="432.0" layoutY="10.0"/>
-                <Button fx:id="btnSearch" layoutX="577.0" layoutY="10.0" mnemonicParsing="false" text="Search"/>
+                <TextField fx:id="txtSearch" layoutX="432.0" layoutY="10.0" onKeyPressed="#searchIfEnterPressed"/>
+                <Button layoutX="577.0" layoutY="10.0" mnemonicParsing="false" text="Search" onAction="#search"/>
             </AnchorPane>
         </top>
     </BorderPane>
