--- a/src/main/resources/fxml/librarian/finesAndPayments/recordPayment.fxml
+++ b/src/main/resources/fxml/librarian/finesAndPayments/recordPayment.fxml
@@ -10,11 +10,11 @@
 <VBox prefHeight="138.0" prefWidth="279.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.crowvalley.tawelib.controller.librarian.finesandpayments.RecordPaymentController">
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
-            <Button fx:id="btnBack" layoutX="18.0" layoutY="14.0" text="&lt;&lt;Back" />
+            <Button layoutX="18.0" layoutY="14.0" text="&lt;&lt;Back" onAction="#loadLibrarianHome" />
             <Label layoutX="44.0" layoutY="58.0" text="User:" />
             <Label layoutX="26.0" layoutY="91.0" text="Amount: £" />
-            <ChoiceBox fx:id="cmbUsers" layoutX="82.0" layoutY="54.0" prefHeight="25.0" prefWidth="170.0" />
-            <TextField fx:id="txtAmount" layoutX="83.0" layoutY="87.0" prefHeight="25.0" prefWidth="57.0" />
-            <Button fx:id="btnRecord" layoutX="149.0" layoutY="87.0" disable="true" text="Record Payment" />
+            <ChoiceBox fx:id="cmbUsers" layoutX="82.0" layoutY="54.0" prefHeight="25.0" prefWidth="170.0" onAction="#enableRecordButtonIfUserSelectedAndAmountTyped" />
+            <TextField fx:id="txtAmount" layoutX="83.0" layoutY="87.0" prefHeight="25.0" prefWidth="57.0" onAction="#enableRecordButtonIfUserSelectedAndAmountTyped" />
+            <Button fx:id="btnRecord" layoutX="149.0" layoutY="87.0" disable="true" text="Record Payment" onAction="#recordPayment" />
       </AnchorPane>
 </VBox>
