--- a/src/main/resources/fxml/librarian/resources/editResource.fxml
+++ b/src/main/resources/fxml/librarian/resources/editResource.fxml
@@ -27,17 +27,17 @@
                 <TextField fx:id="txtOptional4" layoutX="162.0" layoutY="253.0" visible="false" />
                 <TextField fx:id="txtOptional5" layoutX="162.0" layoutY="284.0" visible="false" />
 
-                <Button fx:id="btnUpdate" layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0"
-                        text="Update Resource" />
+                <Button layoutX="133.0" layoutY="323.0" prefHeight="25.0" prefWidth="120.0"
+                        text="Update Resource" onAction="#updateResource" />
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <ImageView fx:id="imgResourcePic" fitHeight="250.0" fitWidth="240.0" layoutY="54.0"
                            pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0"/>
-                <Button fx:id="btnChangePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0"
-                        text="Change Picture"/>
-                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
+                <Button layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0"
+                        text="Change Picture" onAction="#chooseImage" />
+                <Button layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#loadLibrarianHome" />
             </AnchorPane>
         </left>
     </BorderPane>
