Set onActions in FXML for AddNewUser page

--- a/src/main/resources/fxml/librarian/users/addNewUser.fxml
+++ b/src/main/resources/fxml/librarian/users/addNewUser.fxml
@@ -26,7 +26,7 @@
                 <Label layoutX="101.0" layoutY="295.0" text="Postcode:" />
                 <Label fx:id="lblEmploymentDate" layoutX="55.0" layoutY="326.0" text="Employment Date:" visible="false"/>
 
-                <CheckBox fx:id="chkLibrarian" layoutX="162.0" layoutY="17.0" text="Librarian?" />
+                <CheckBox fx:id="chkLibrarian" layoutX="162.0" layoutY="17.0" text="Librarian?" onAction="#setDatePickerVisibility" />
 
                 <TextField fx:id="txtUsername" layoutX="162.0" layoutY="43.0" />
                 <TextField fx:id="txtFirstName" layoutX="162.0" layoutY="74.0" />
@@ -39,14 +39,14 @@
                 <TextField fx:id="txtPostcode" layoutX="162.0" layoutY="291.0" />
                 <DatePicker fx:id="datePicker" layoutX="162.0" layoutY="322.0" visible="false"/>
 
-                <Button fx:id="btnAdd" layoutX="176.0" layoutY="357.0" prefHeight="25.0" prefWidth="120.0" text="Add User" />
+                <Button fx:id="btnAdd" layoutX="176.0" layoutY="357.0" prefHeight="25.0" prefWidth="120.0" text="Add User" onAction="#addUser" />
             </AnchorPane>
         </center>
         <left>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                 <ImageView fx:id="imgProfilePic" fitHeight="250.0" fitWidth="240.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="14.0" />
-                <Button fx:id="btnChoosePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0" text="Choose Profile Picture" />
-                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" />
+                <Button fx:id="btnChoosePic" layoutX="63.0" layoutY="323.0" prefHeight="25.0" prefWidth="143.0" text="Choose Profile Picture" onAction="#chooseImage" />
+                <Button fx:id="btnBack" layoutX="14.0" layoutY="14.0" text="&lt;&lt; Back" onAction="#goBack" />
             </AnchorPane>
         </left>
     </BorderPane>
