--- a/src/main/resources/fxml/user/userBrowseResources.fxml
+++ b/src/main/resources/fxml/user/userBrowseResources.fxml
@@ -36,7 +36,7 @@
         </bottom>
         <top>
             <AnchorPane prefHeight="21.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-                <Button fx:id="btnBack" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#loadUserHome" />
+                <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="&lt;&lt; Back" onAction="#loadUserHome" />
                 <Label layoutX="227.0" layoutY="14.0" text="Resource Type:" />
                 <ChoiceBox fx:id="cmbType" layoutX="311.0" layoutY="10.0" prefHeight="25.0" prefWidth="112.0" onAction="#executeTypeChange">
                     <value>
